--- a/donationSite/package.json
+++ b/donationSite/package.json
@@ -12,7 +12,8 @@
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
